--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,11 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for("static", filename="style.css") }}">
 </head>
 <script>
-    function showFamily(gpName) {
-        var words = document.getElementsByClassName(gpName);
-        for (word of words) {
-            word.style.backgroundColor = "yellow";
+    function highlightWordGroup(tagName) {
+        if (tagName != "group-None") {
+            for (word of document.getElementsByClassName(tagName)) {
+                word.style.backgroundColor = "yellow";
+            }
         }
     }
     
@@ -19,15 +20,17 @@
 <div class="textmain">
     <div class="flex-container">
         {% for line in text_src %}
-        <div class="line">
-            {% for word, gp in line %}
-            <span class="word gp-{{ gp }}" onmouseover="showFamily('gp-{{ gp }}')" onmouseout="clearWords()">{{ word }}</span>
-            {% endfor %}
-        </div>
-        <div class="line">
-            {% for word, gp in text_tgt[loop.index0] %}
-            <span class="word gp-{{ gp }}" onmouseover="showFamily('gp-{{ gp }}')" onmouseout="clearWords()">{{ word }}</span>
-            {% endfor %}
+        <div class="line-pair">
+            <div class="line target">
+                {% for word, tagname in line %}
+                <span class="word {{ tagname }}" onmouseover="highlightWordGroup('{{ tagname }}')" onmouseout="clearWords()">{{ word }}</span>
+                {% endfor %}
+            </div>
+            <div class="line source">
+                {% for word, tagname in text_tgt[loop.index0] %}
+                <span class="word {{ tagname }}" onmouseover="highlightWordGroup('{{ tagname }}')" onmouseout="clearWords()">{{ word }}</span>
+                {% endfor %}
+            </div>
         </div>
         {% endfor %}
     </div>
