--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,15 @@ html {
     height: 100%;
 }
 
+.flex-container-sided {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+}
+
 .line-pair {
     padding: 1em;
 }
